Put realtors below the header Put story content before the story pictures Fix missing background-size: cover; for story pictures.

--- a/Nexter/ng-nexter-starter/src/sass/_base.scss
+++ b/Nexter/ng-nexter-starter/src/sass/_base.scss
@@ -17,6 +17,7 @@ $font-display: 'Josefin Sans', sans-serif;
 // RESPONSIVE BREAKPOINTS
 $bp-largest: 75em; // 1200px
 $bp-large: 62.5em; // 1000px
+$bp-medium: 50em; // 800px
 
 *,
 *::before,
@@ -63,6 +64,12 @@ body {
     grid-template-rows: 6rem 80vh min-content minmax(min-content,40vw) repeat(3, min-content); // grid rows with heights
     grid-template-columns: [full-start] minmax(6rem,1fr) [center-start]
     repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem,1fr) [full-end];
+  }
+
+  @media only screen and (max-width: $bp-medium) {
+    // Put realtors below the header
+    // Put story content before the story pictures
+    grid-template-rows: 6rem calc(100vh - 6rem) min-content min-content minmax(min-content,40vw) repeat(3, min-content); // grid rows with heights
   }
 
 }
