--- a/Nexter/ng-nexter-starter/src/sass/_header.scss
+++ b/Nexter/ng-nexter-starter/src/sass/_header.scss
@@ -1,6 +1,11 @@
 .header {
   background-color: $color-grey-light-2;
   grid-column: full-start / col-end 6; // No dash between col-end and 6
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: full-start / full-end;
+  }
+
   //overflow: hidden;
   padding: 8rem;
   padding-top: 4rem;
