--- a/Nexter/ng-nexter-starter/src/sass/_realtors.scss
+++ b/Nexter/ng-nexter-starter/src/sass/_realtors.scss
@@ -2,6 +2,12 @@
   background-color: $color-secondary;
   grid-column: col-start 7 / full-end;
 
+  @media only screen and (max-width: $bp-medium) {
+    grid-row: 3;
+    grid-column: full-start / full-end;
+    padding: 6rem;
+  }
+
   display: grid;
   align-content: center; // center grid in container vertically
   justify-content: center; // center grid in container horizontally
@@ -10,6 +16,11 @@
   &__list {
     display: grid;
     grid-template-columns: min-content max-content;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-template-columns: repeat(3, min-content max-content);
+    }
+
     grid-column-gap: 2rem;
     grid-row-gap: 5vh;
     align-items: center;
